discussion/kv_engine/168078/168078_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49811 Make magma_enable_block_cache a dynamic config

Linked magma change: https://review.couchbase.org/c/magma/+/168076

Change-Id: Ieb7b74e79e0cf533be29aba6ceb4da2b6da77204

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-12-23 11:33:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-23 11:51:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36067/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"; did you mean "setMagmaEnableBlockCache"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36067/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14610/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16: error: no member named "setEnableBlockCache" in "MagmaKVStore"; did you mean "setMagmaEnableBlockCache"? [clang-diagnostic-error]
        store->setEnableBlockCache(enable);
               ^~~~~~~~~~~~~~~~~~~
               setMagmaEnableBlockCache
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:538:10: note: "setMagmaEnableBlockCache" declared here
    void setMagmaEnableBlockCache(bool enable);
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14610/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"; did you mean "setMagmaEnableBlockCache"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14610/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42552/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc(176): error C2039: "setEnableBlockCache": is not a member of "MagmaKVStore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4250/ : FAILURE

Compile error at [2021-12-23T11:36:29.758Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4250/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16548/ : FAILURE

Compile error at [2021-12-23T11:35:56.556Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: ?class MagmaKVStore? has no member named ?setEnableBlockCache?; did you mean ?setMagmaEnableBlockCache??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16548/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4308/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15410/ : FAILURE

Compile error at [2021-12-23T11:37:28.609Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15410/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24664/ : FAILURE

Compile error at [2021-12-23T11:49:39.141Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24664/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17331/ : FAILURE

Compile error at [2021-12-23T11:34:57.636Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:176:16:
error: no member named "setEnableBlockCache" in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16256/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
